dark mode fix

--- a/mdn-event-calendar/src/components/DarkMode/DarkMode.css
+++ b/mdn-event-calendar/src/components/DarkMode/DarkMode.css
@@ -1,14 +1,15 @@
 .dark_mode {
     margin-top: -20px;
-    margin-left: 10px;
+    position: absolute;
+    margin-right: -1100px;
 }
 
 .dark_mode_label {
-    width: 65px;
-    height: 30px;
+    width: 45px;
+    height: 20px;
     position: relative;
     display: block;
-    background: palevioletred;
+    background: rgba(115, 2, 106, 0.514);
     border-radius: 200px;
     box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
         inset 0px -5px 15px rgba(255, 255, 255, 0.4);
@@ -17,12 +18,12 @@
 }
 .dark_mode_label:after {
     content: "";
-    width: 25px;
-    height: 25px;
+    width: 15px;
+    height: 15px;
     position: absolute;
     top: 3px;
     left: 3px;
-    background: linear-gradient(180deg, pink, palevioletred);
+    background: linear-gradient(180deg, rgb(230, 209, 222), rgb(132, 12, 112));
     border-radius: 180px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -36,9 +37,9 @@
     background: #242424;
 }
 .dark_mode_input:checked + .dark_mode_label:after {
-    left: 62px;
+    left: 42px;
     transform: translateX(-100%);
-    background: linear-gradient(180deg, #777, #3a3a3a);
+    background: linear-gradient(180deg, #837a85, #36193b);
 }
 .dark_mode_label:active:after {
     width: 30px;
